# SparseWatertight

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  myTimer.hpp  sparseGrid.cpp  sparseGrid.hpp  utils.hpp
